# data-professor

./: .gitignore  README.md  gitignore  leak.txt  pyproject.toml
config/: default.yaml
src/data_professor/: __init__.py  cli.py  core.py  profiler.py  qa.py
src/data_professor/connectors/: s3.py
tests/: test_connectors.py
